# kaco-modbus

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
src/kaco_modbus/: __init__.py  common.py  discovery.py  dump.py  enums.py  exceptions.py  inverter.py  kaco.py  mppt.py  testing.py
tests/: conftest.py  test_common.py  test_discovery.py  test_dump.py  test_inverter.py  test_kaco.py  test_mppt.py  test_reference_dump.py  test_testing_fixture.py
tests/reference/: blueplanet_86tl3.json
