[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaco-modbus"
version = "0.1.0"
description = "Read a KACO blueplanet inverter over SunSpec Modbus TCP."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Gabriel Lackermeier" }]
keywords = ["modbus", "kaco", "blueplanet", "sunspec", "solar", "home-assistant"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
]
dependencies = ["modbus-connection>=3.4,<4"]

[project.optional-dependencies]
cli = ["modbus-connection[tmodbus]>=3.4,<4"]

[project.urls]
Homepage = "https://github.com/glackermeier/kaco-modbus"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.14",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kaco_modbus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.13"
mypy_path = "src"
packages = ["kaco_modbus"]
